test/types/range/stonea/countedRangeBy-2.good
countedRangeBy-2.chpl:1: error: cannot apply 'by' to 'int(64)'
